@@ -2,7 +2,7 @@
  * antic.c - ANTIC chip emulation
  *
  * Copyright (C) 1995-1998 David Firth
- * Copyright (C) 1998-2005 Atari800 development team (see DOC/CREDITS)
+ * Copyright (C) 1998-2006 Atari800 development team (see DOC/CREDITS)
  *
  * This file is part of the Atari800 emulator project which emulates
  * the Atari 400, 800, 800XL, 130XE, and 5200 8-bit computers.
@@ -641,6 +641,13 @@ UWORD cl_lookup[128];
 
 #endif /* WORDS_UNALIGNED_OK */
 
+#define DRAW_ARTIF_NEW {\
+		WRITE_VIDEO(ptr++, art_lookup_new[(screendata_tally & 0x03f000) >> 12]); \
+		WRITE_VIDEO(ptr++, art_lookup_new[(screendata_tally & 0x00fc00) >> 10]); \
+		WRITE_VIDEO(ptr++, art_lookup_new[(screendata_tally & 0x003f00) >> 8]); \
+		WRITE_VIDEO(ptr++, art_lookup_new[(screendata_tally & 0x000fc0) >> 6]); \
+	}
+
 /* Hi-res modes optimizations
    Now hi-res modes are drawn with words, not bytes. Endianess defaults
    to little-endian. WORDS_BIGENDIAN should be defined when compiling on
@@ -668,6 +675,7 @@ static UWORD hires_lookup_m[128];
 #define hires_mask(x)	hires_lookup_m[(x) >> 1]
 
 #ifndef USE_COLOUR_TRANSLATION_TABLE
+int artif_new = FALSE; /* New type of artifacting */
 UWORD hires_lookup_l[128];	/* accessed in gtia.c */
 #define hires_lum(x)	hires_lookup_l[(x) >> 1]
 #endif
@@ -869,6 +877,10 @@ static void pmg_dma(void)
 /* Artifacting ------------------------------------------------------------ */
 
 int global_artif_mode;
+
+static UWORD art_lookup_new[64];
+static UWORD art_colour1_new;
+static UWORD art_colour2_new;
 
 static ULONG art_lookup_normal[256];
 static ULONG art_lookup_reverse[256];
@@ -1326,6 +1338,33 @@ static void draw_an_gtia11(const ULONG *t_pm_scanline_ptr)
 	hires_norm(0x80) = hires_norm(0x20) = hires_norm(0x08) = (cl_lookup[C_PF2] & HIRES_MASK_10) | hires_lum(0x80);\
 	hires_norm(0xc0) = hires_norm(0x30) = hires_norm(0x0c) = (cl_lookup[C_PF2] & 0xf0f0) | hires_lum(0xc0);
 
+#define INIT_ARTIF_NEW art_lookup_new[0] = art_lookup_new[1] = art_lookup_new[2] = art_lookup_new[3] = \
+	art_lookup_new[16] = art_lookup_new[17] = art_lookup_new[18] = art_lookup_new[19] = \
+	art_lookup_new[32] = art_lookup_new[33] = art_lookup_new[34] = art_lookup_new[35] = \
+	art_lookup_new[48] = art_lookup_new[49] = art_lookup_new[50] = art_lookup_new[51] = cl_lookup[C_PF2];\
+	art_lookup_new[7] = art_lookup_new[23] = art_lookup_new[39] = art_lookup_new[55] = (cl_lookup[C_PF2] & HIRES_MASK_01) | hires_lum(0x40);\
+	art_lookup_new[56] = art_lookup_new[57] = art_lookup_new[58] = art_lookup_new[59] = (cl_lookup[C_PF2] & HIRES_MASK_10) | hires_lum(0x80);\
+	art_lookup_new[12] = art_lookup_new[13] = art_lookup_new[14] = art_lookup_new[15] = \
+	art_lookup_new[28] = art_lookup_new[29] = art_lookup_new[30] = art_lookup_new[31] = \
+	art_lookup_new[44] = art_lookup_new[45] = art_lookup_new[46] = art_lookup_new[47] = \
+	art_lookup_new[60] = art_lookup_new[61] = art_lookup_new[62] = art_lookup_new[63] = (cl_lookup[C_PF2] & 0xf0f0) | hires_lum(0xc0);\
+	if ((cl_lookup[C_PF2] & 0x0F00) != (cl_lookup[C_PF1] & 0x0F00)) { \
+		art_lookup_new[4] = art_lookup_new[5] = art_lookup_new[36] = art_lookup_new[37] = \
+		art_lookup_new[52] = art_lookup_new[53 ]= ((art_colour1_new & BYTE1_MASK & ~(HIRES_LUM_01))) | hires_lum(0x40) | (cl_lookup[C_PF2] & BYTE0_MASK);\
+		art_lookup_new[20] = art_lookup_new[21] = (art_colour1_new & 0xf0f0) | hires_lum(0xc0);\
+		art_lookup_new[8] = art_lookup_new[9] = art_lookup_new[11] = art_lookup_new[40] = \
+		art_lookup_new[43] = ((art_colour2_new & BYTE0_MASK & ~(HIRES_LUM_10))) | hires_lum(0x80) | (cl_lookup[C_PF2] & BYTE1_MASK);\
+		art_lookup_new[10] = art_lookup_new[41] = art_lookup_new[42] = (art_colour2_new & 0xf0f0) | hires_lum(0xc0);\
+		}\
+	else {\
+		art_lookup_new[4] = art_lookup_new[5] = art_lookup_new[36] = art_lookup_new[37] = \
+		art_lookup_new[52] = art_lookup_new[53 ]= art_lookup_new[20] = art_lookup_new[21] = \
+		art_lookup_new[8] = art_lookup_new[9] = art_lookup_new[11] = art_lookup_new[40] = \
+		art_lookup_new[43] = art_lookup_new[10] = art_lookup_new[41] = art_lookup_new[42] = cl_lookup[C_PF2];\
+		}\
+	art_lookup_new[6] = art_lookup_new[22] = art_lookup_new[38] = art_lookup_new[54] = (cl_lookup[C_PF2] & HIRES_MASK_01) | hires_lum(0x40);\
+	art_lookup_new[24] = art_lookup_new[25] = art_lookup_new[26] = art_lookup_new[27] = (cl_lookup[C_PF2] & HIRES_MASK_10) | hires_lum(0x80);
+
 #define DO_PMG_HIRES(data) {\
 	const UBYTE *c_pm_scanline_ptr = (const UBYTE *) t_pm_scanline_ptr;\
 	int pm_pixel;\
@@ -1338,8 +1377,21 @@ static void draw_an_gtia11(const ULONG *t_pm_scanline_ptr)
 	FOUR_LOOP_END(data)\
 }
 
-#endif /* USE_COLOUR_TRANSLATION_TABLE */
+#define DO_PMG_HIRES_NEW(data, tally) {\
+	const UBYTE *c_pm_scanline_ptr = (const UBYTE *) t_pm_scanline_ptr;\
+	int pm_pixel;\
+	FOUR_LOOP_BEGIN(data)\
+		pm_pixel = *c_pm_scanline_ptr++;\
+		if (pm_pixel) \
+			WRITE_VIDEO(ptr++, (COLOUR(pm_lookup_ptr[pm_pixel] | L_PF2)));\
+		else\
+			WRITE_VIDEO(ptr++, art_lookup_new[(tally & 0xfc0000) >> 18]); \
+		data <<= 2;\
+		tally <<= 6;\
+	FOUR_LOOP_END(data)\
+}
 
+#endif /* USE_COLOUR_TRANSLATION_TABLE */
 
 #ifdef NEW_CYCLE_EXACT
 #define ADD_FONT_CYCLES
@@ -1469,6 +1521,42 @@ static void draw_antic_2_artif(int nchars, const UBYTE *ANTIC_memptr, UWORD *ptr
 	CHAR_LOOP_END
 	do_border();
 }
+
+#ifndef USE_COLOUR_TRANSLATION_TABLE
+static void draw_antic_2_artif_new(int nchars, const UBYTE *ANTIC_memptr, UWORD *ptr, const ULONG *t_pm_scanline_ptr)
+{
+	ULONG screendata_tally;
+	ULONG pmtally;
+	UBYTE screendata = *ANTIC_memptr++;
+	UBYTE chdata;
+	INIT_ANTIC_2
+	INIT_ARTIF_NEW
+	GET_CHDATA_ANTIC_2
+	screendata_tally = chdata;
+	setup_art_colours();
+
+	CHAR_LOOP_BEGIN
+		UBYTE screendata = *ANTIC_memptr++;
+		ULONG chdata;
+
+		GET_CHDATA_ANTIC_2
+		screendata_tally <<= 8;
+		screendata_tally |= chdata;
+		if (IS_ZERO_ULONG(t_pm_scanline_ptr))
+			DRAW_ARTIF_NEW
+		else {
+			chdata = screendata_tally >> 8;
+			pmtally = ((screendata_tally & 0x03f000) << 6) |
+					  ((screendata_tally & 0x00fc00) << 2) |
+					  ((screendata_tally & 0x003f00) >> 2) |
+					  ((screendata_tally & 0x000fc0) >> 6);
+			DO_PMG_HIRES_NEW(chdata,pmtally)
+		}
+		t_pm_scanline_ptr++;
+	CHAR_LOOP_END
+	do_border();
+}
+#endif
 
 static void prepare_an_antic_2(int nchars, const UBYTE *ANTIC_memptr, const ULONG *t_pm_scanline_ptr)
 {
@@ -2216,6 +2304,34 @@ static void draw_antic_f_artif(int nchars, const UBYTE *ANTIC_memptr, UWORD *ptr
 	do_border();
 }
 
+#ifndef USE_COLOUR_TRANSLATION_TABLE
+static void draw_antic_f_artif_new(int nchars, const UBYTE *ANTIC_memptr, UWORD *ptr, const ULONG *t_pm_scanline_ptr)
+{
+	ULONG pmtally;
+	ULONG screendata_tally = *ANTIC_memptr++;
+	INIT_ARTIF_NEW
+
+	setup_art_colours();
+	CHAR_LOOP_BEGIN
+		int screendata = *ANTIC_memptr++;
+		screendata_tally <<= 8;
+		screendata_tally |= screendata;
+		if (IS_ZERO_ULONG(t_pm_scanline_ptr))
+			DRAW_ARTIF_NEW
+		else {
+			screendata = ANTIC_memptr[-2];
+			pmtally = ((screendata_tally & 0x03f000) << 6) |
+					  ((screendata_tally & 0x00fc00) << 2) |
+					  ((screendata_tally & 0x003f00) >> 2) |
+					  ((screendata_tally & 0x000fc0) >> 6);
+			DO_PMG_HIRES_NEW(screendata,pmtally)
+		}
+		t_pm_scanline_ptr++;
+	CHAR_LOOP_END
+	do_border();
+}
+#endif
+
 static void prepare_an_antic_f(int nchars, const UBYTE *ANTIC_memptr, const ULONG *t_pm_scanline_ptr)
 {
 	UBYTE *an_ptr = (UBYTE *) t_pm_scanline_ptr + (an_scanline - pm_scanline);
@@ -2480,8 +2596,25 @@ void ANTIC_UpdateArtifacting(void)
 		return;
 	}
 
-	draw_antic_table[0][2] = draw_antic_table[0][3] = draw_antic_2_artif;
-	draw_antic_table[0][0xf] = draw_antic_f_artif;
+#ifndef USE_COLOUR_TRANSLATION_TABLE
+	if (artif_new) {
+		static UWORD new_art_colour_table[4][2] = {
+			{0x4040, 0x8080},
+			{0x8080, 0x4040},
+			{0x8080, 0xd0d0},
+			{0xd0d0, 0x8080}
+		};
+		draw_antic_table[0][2] = draw_antic_table[0][3] = draw_antic_2_artif_new;
+		draw_antic_table[0][0xf] = draw_antic_f_artif_new;
+		art_colour1_new = new_art_colour_table[global_artif_mode - 1][0];
+		art_colour2_new = new_art_colour_table[global_artif_mode - 1][1];
+	}
+	else
+#endif
+	{
+		draw_antic_table[0][2] = draw_antic_table[0][3] = draw_antic_2_artif;
+		draw_antic_table[0][0xf] = draw_antic_f_artif;
+	}
 
 	art_colours = (global_artif_mode <= 4 ? art_colour_table[global_artif_mode - 1] : art_colour_table[2]);
 
